Basically revert r37824 (minus restoring the origin), since it causes other problems (#6415 for example).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37833 a95241bf-73f2-0310-859d-f6bbb57e9c96